# shimmie2-discordbot

./: .gitignore  Cargo.toml  README.md
migrations/2025-05-07-141146_posts/: up.sql
migrations/2025-05-07-141150_comments/: up.sql
src/: dbfn.rs  errors.rs  lib.rs  main.rs  schema.rs  udp_client.rs
src/handlers/: comment.rs  image.rs  logging.rs  mod.rs  user.rs
src/handlers/embed/: comment_embed.rs  image_embed.rs  mod.rs
src/models/: db.rs  mod.rs  shimmie_json.rs
