[package]
name = "findafoxbot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
mime = "0.3.17"
mime_serde_shim = "0.2"
mime_guess = "2.0.5"